[tool.poetry]
name = "mkt"
version = "0.1.0"
description = ""
authors = ["qgeindreau"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.4.8"
pandas = "^1.5.0"
tensorflow = "^2.10.0"
plotly = "^5.10.0"
matplotlib = "^3.6.1"
scikit-learn = "^1.1.2"
Pillow = "^9.2.0"
autokeras = "^1.0.20"
fastai = "^2.7.9"
tensorflow-addons = "^0.18.0"
transformers = "^4.23.1"
datasets = "^2.6.1"
JIT = "^0.0.1"
numba = "^0.56.3"
pytorch-lightning = "^1.7.7"
efficientnet-pytorch = "^0.7.1"
torchmetrics = "^0.10.0"
ipywidgets = "^8.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
